# card-game-gl

./: CMakeLists.txt
audio/CardMovement/: Card Movement.m4a  CardFlipGround 2.m4a  CardPass.m4a  Flick.m4a  Multiple Deck.m4a
include/: animation.h  animation_queue.h  game.h  keys.h  shader.h  sound.h  sprite.h  structures.h  texture_loader.h
include/animations/: animation.h  animation_manager.h
include/glad/: glad.h
include/third_parties/glad/: glad.h
shaders/: vertex_triangle.glsl
src/: game.cpp  glad.c  main.cpp  sound.cpp  sprite.cpp  structures.cpp  texture_loader.cpp
src/animations/: animation_manager.cpp
src/third_parties/: glad.c
